Fix overflow issues.

--- a/layouts/SideBySide/screen.css
+++ b/layouts/SideBySide/screen.css
@@ -35,9 +35,16 @@ p {
 	width:100%;
 	position:absolute;
 	bottom:0;
-	overflow:hidden;
 	border-top:1px solid black;
 	}
+	
+#formWrap ul {
+    height:8%;
+}	
+#transcriptionWrap {
+    height:82%;
+    overflow:auto;
+}
 	
 #discussionWrapList {
 	width:100%;
